--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>SemihBurhan</groupId>
-    <artifactId>InsiderAPIAutomation</artifactId>
+    <artifactId>InsiderAPIAutomationTask</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>InsiderAPIAutomation</name>
+    <name>InsiderAPIAutomationTask</name>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
